{
  "version": 4,
  "terraform_version": "1.7.0",
  "serial": 84,
  "lineage": "34e27f2b-f475-a2b7-c31d-bfc784cf9e69",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_security_policy",
      "name": "policy",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "adaptive_protection_config": [],
            "advanced_options_config": [],
            "description": "",
            "fingerprint": "Y7Ifa6iNPMo=",
            "id": "projects/news-engagement-on-media/global/securityPolicies/mage-data-prep-security-policy",
            "name": "mage-data-prep-security-policy",
            "project": "news-engagement-on-media",
            "recaptcha_options_config": [],
            "rule": [
              {
                "action": "allow",
                "description": "Whitelist IP",
                "header_action": [],
                "match": [
                  {
                    "config": [
                      {
                        "src_ip_ranges": [
                          "78.18.169.75/32"
                        ]
                      }
                    ],
                    "expr": [],
                    "versioned_expr": "SRC_IPS_V1"
                  }
                ],
                "preview": false,
                "priority": 100,
                "rate_limit_options": [],
                "redirect_options": []
              },
              {
                "action": "deny(403)",
                "description": "default rule",
                "header_action": [],
                "match": [
                  {
                    "config": [
                      {
                        "src_ip_ranges": [
                          "*"
                        ]
                      }
                    ],
                    "expr": [],
                    "versioned_expr": "SRC_IPS_V1"
                  }
                ],
                "preview": false,
                "priority": 2147483647,
                "rate_limit_options": [],
                "redirect_options": []
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/news-engagement-on-media/global/securityPolicies/mage-data-prep-security-policy",
            "timeouts": null,
            "type": "CLOUD_ARMOR"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.http.myip"
          ]
        }
      ]
    },
    {
      "module": "module.lb-http",
      "mode": "managed",
      "type": "google_compute_global_address",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google-beta\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "address": "34.160.183.25",
            "address_type": "EXTERNAL",
            "creation_timestamp": "2024-03-26T02:24:39.442-07:00",
            "id": "projects/news-engagement-on-media/global/addresses/mage-data-prep-urlmap-address",
            "label_fingerprint": "tjR8I27v5HY=",
            "labels": {
              "example-label": "cloud-run-example"
            },
            "name": "mage-data-prep-urlmap-address",
            "prefix_length": 0,
            "project": "news-engagement-on-media",
            "self_link": "https://www.googleapis.com/compute/v1/projects/news-engagement-on-media/global/addresses/mage-data-prep-urlmap-address"
          }
        }
      ]
    },
    {
      "module": "module.lb-http",
      "mode": "managed",
      "type": "google_compute_url_map",
      "name": "https_redirect",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": []
    }
  ]
}